# ChangeLog for net-misc/nxcomp
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/nxcomp/Attic/ChangeLog,v 1.14 2004/06/25 00:01:03 agriffis Exp $

  15 May 2004; Stuart Herbert <stuart@gentoo.org> nxcomp-1.3.2.ebuild:
  Added call to prelib, as portage doesn't seem to do this automagically :(

  14 May 2004; Stuart Herbert <stuart@gentoo.org> nxcomp-1.3.2.ebuild:
  Fix for nxcomp trying to install wrong library version

*nxcomp-1.3.2 (13 May 2004)

  13 May 2004; Stuart Herbert <stuart@gentoo.org> nxcomp-1.2.2.ebuild,
  nxcomp-1.3.0_beta2.ebuild, nxcomp-1.3.2.ebuild:
  Added nxcomp-1.3.2, for nxserver 1.3.2.  Removed older versions

  11 Mar 2004; David Holm <dholm@gentoo.org> nxcomp-1.3.0.ebuild:
  Added to ~ppc.

  27 Feb 2004; Stuart Herbert <stuart@gentoo.org> nxcomp-1.3.0.ebuild:
  Fix for bug #36270

  25 Dec 2003; Stuart Herbert <stuart@gentoo.org> nxcomp-1.3.0.ebuild:
  Added missing dependencies; for bug #36483

  21 Dec 2003; Stuart Herbert <stuart@gentoo.org> nxcomp-1.3.0.ebuild:
  Marked as stable

*nxcomp-1.3.0 (21 Dec 2003)

  21 Dec 2003; Stuart Herbert <stuart@gentoo.org> nxcomp-1.3.0.ebuild:
  Version bump

*nxcomp-1.3.0_beta2 (24 Nov 2003)

  24 Nov 2003; Stuart Herbert <stuart@gentoo.org> nxcomp-1.3.0_beta2.ebuild:
  Fix for attempt to install wrong version of the .so file

  13 Nov 2003; Stuart Herbert <stuart@gentoo.org> :
  Added ebuild for beta2 of nxcomp-1.3.0

  10 Sep 2003; stuart :
  Added support for latest nxcomp release

  09 Sep 2003; stuart nxcomp-1.2.2.ebuild:
  Marked as stable

*nxcomp-1.2.2 (27 Aug 2003)

  27 Aug 2003; stuart nxcomp-1.2.2.ebuild:
  Initial import
