@@ -1,10 +1,12 @@
-MD5 d66d0aabddc6b2358de259882a878758 nxcomp-1.3.2-r1.ebuild 981
-MD5 adea8d302171fed8ae5b81482180ce79 nxcomp-1.3.0.ebuild 958
-MD5 1dc664eebfff31254456ac16d9b3e461 nxcomp-1.3.2.ebuild 945
-MD5 b9184165fd19bee89dd39752c68eb44e nxcomp-1.2.2-r1.ebuild 764
-MD5 b71accecd91907ba15fcbd99bdf73b19 ChangeLog 1687
+MD5 aaec787877be70a75aa0b4dd926d5ae3 ChangeLog 1802
 MD5 8e92b9291198042d907534cb08b013f8 metadata.xml 361
+MD5 b9184165fd19bee89dd39752c68eb44e nxcomp-1.2.2-r1.ebuild 764
+MD5 adea8d302171fed8ae5b81482180ce79 nxcomp-1.3.0.ebuild 958
+MD5 3a229e47ff8ae7f4a92d0c9a11b7b09c nxcomp-1.4.0.ebuild 984
+MD5 d66d0aabddc6b2358de259882a878758 nxcomp-1.3.2-r1.ebuild 981
+MD5 1dc664eebfff31254456ac16d9b3e461 nxcomp-1.3.2.ebuild 945
 MD5 93171603dadf0e06996bd9fd833c5064 files/digest-nxcomp-1.2.2-r1 67
-MD5 bbbdf1a4b71647d0606017837bb7fc69 files/digest-nxcomp-1.3.2-r1 66
 MD5 a766a8d9478498b282f0852b5e38377d files/digest-nxcomp-1.3.0 67
 MD5 bbbdf1a4b71647d0606017837bb7fc69 files/digest-nxcomp-1.3.2 66
+MD5 bbbdf1a4b71647d0606017837bb7fc69 files/digest-nxcomp-1.3.2-r1 66
+MD5 d10a1aaa6ba54fd46ac5be10caa8fcb1 files/digest-nxcomp-1.4.0 67
