@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/nxcomp
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/nxcomp/Attic/ChangeLog,v 1.14 2004/06/25 00:01:03 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/nxcomp/Attic/ChangeLog,v 1.15 2004/09/12 21:12:20 stuart Exp $
+
+*nxcomp-1.4.0 (12 Sep 2004)
+
+  12 Sep 2004; Stuart Herbert <stuart@gentoo.org> +nxcomp-1.4.0.ebuild:
+  Version bump
 
   15 May 2004; Stuart Herbert <stuart@gentoo.org> nxcomp-1.3.2.ebuild:
   Added call to prelib, as portage doesn't seem to do this automagically :(
